respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Customer_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Move_Type__c</fullName>
        <label>Move Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Door to Door</fullName>
                    <default>true</default>
                    <label>Door to Door</label>
                </value>
                <value>
                    <fullName>Door to Port</fullName>
                </value>
                <value>
                    <fullName>Port to Door</fullName>
                </value>
                <value>
                    <fullName>Port to Port</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NUM_Total_Disbursements_Cargo__c</fullName>
        <label>NUM Total Disbursements Cargo</label>
        <summarizedField>Quote_Item_Line__c.Total_Amount_Disbursement_Currency_Hea__c</summarizedField>
        <summaryForeignKey>Quote_Item_Line__c.Import_Export_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NUM_Total_Disbursements_Service__c</fullName>
        <label>NUM Total Disbursements Service</label>
        <summarizedField>Import_Export_Fee_Line__c.Total_Amount_Disbursements_Hea_Currency__c</summarizedField>
        <summaryForeignKey>Import_Export_Fee_Line__c.Import_Export_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Name_Import_Export_Origin__c</fullName>
        <label>Name Import-Export Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_Merchandise__c</fullName>
        <label>Nature Merchandise</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navegacion_Trafico_De__c</fullName>
        <description>Registra el tipo de puerto por el que se documentan los bienes o mercancías vía marítima.</description>
        <inlineHelpText>Registra el tipo de puerto por el que se documentan los bienes o mercancías vía marítima.</inlineHelpText>
        <label>Navegacion Trafico Destino</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Altura</fullName>
                </value>
                <value>
                    <fullName>Cabotaje</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Navegacion_Trafico_Destino__c</fullName>
        <label>Navegacion Trafico Destino</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Altura</fullName>
                </value>
                <value>
                    <fullName>Cabotaje</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Navegacion_Trafico_Or__c</fullName>
        <description>Solo Martimos</description>
        <inlineHelpText>Solo Maritimos:  Registra el tipo de puerto por el que se documentan los bienes o mercancías vía marítima.</inlineHelpText>
        <label>Navegacion Trafico Origen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Altura</fullName>
                </value>
                <value>
                    <fullName>Cabotaje</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Navegacion_Trafico_Origen__c</fullName>
        <label>Navegacion Trafico Origen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Altura</fullName>
                </value>
                <value>
                    <fullName>Cabotaje</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Packages__c</fullName>
        <label>Number of Packages</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_Folio__c</fullName>
        <label>Numero Folio</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observations_Long__c</fullName>
        <label>Observation Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observations__c</fullName>
        <label>Observations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <formula>CreatedBy.Country &amp;&quot;, &quot;&amp; CreatedBy.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Only_Warehouse_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Warehouse Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations_Exec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Import_Export_Quotes_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Closed_Date__c</fullName>
        <label>Order Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Production_Status__c</fullName>
        <label>Order Production Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Production</fullName>
                </value>
                <value>
                    <fullName>In Production</fullName>
                </value>
                <value>
                    <fullName>Finish Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_in_Progress_Date__c</fullName>
        <label>Order in Progress Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Origin_Address__c</fullName>
        <label>Initial Origin Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Origin_Location__c</fullName>
        <label>Origin Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <description>&quot;Amount Received&quot; - &quot;Total Invoiced (Incl. VAT)&quot;</description>
        <formula>Total_Invoiced_Incl_VAT_Number__c - Amount_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Amount Received&quot; - &quot;Total Invoiced (Incl. VAT)&quot;</inlineHelpText>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_Dimensions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over Dimensions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Deparment__c</fullName>
        <formula>CreatedBy.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IE Owner Deparment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>TEXT(Account_for__r.Owner.Zona_Comercial__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Notes_EN__c</fullName>
        <label>PDF Notes EN</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDF_Notes__c</fullName>
        <label>PDF Notes</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PICKUP__c</fullName>
        <label>PICKUP</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>POD_incoterm__c</fullName>
        <label>POD incoterm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>DAP</fullName>
                </value>
                <value>
                    <fullName>DAT</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POL_incoterm__c</fullName>
        <label>POL incoterm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>DAP</fullName>
                </value>
                <value>
                    <fullName>DAT</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pickup_Cartage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify Site of Discharge and Site of Load first</inlineHelpText>
        <label>Pickup Zone</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Delivery_Zone__c.Port_Airport__c</field>
                <operation>equals</operation>
                <valueField>$Source.Site_of_Load__c</valueField>
            </filterItems>
            <filterItems>
                <field>Delivery_Zone__c.Port_Airport__c</field>
                <operation>equals</operation>
                <valueField>$Source.Site_of_Discharge__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Delivery_Zone__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders (Pickup Drayage)</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Pickup_Cartage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_ETA_SP__c</fullName>
        <description>Date and place specifying estimated arrival of order</description>
        <formula>Last_Shipment__r.ETA_Point_of_Discharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned ETA (SP)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planner_email_zone__c</fullName>
        <label>Planner email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pricing_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Import_Export_Quotes_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Time_Days__c</fullName>
        <label>Production Time (Days)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prueba_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prueba Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Incoterm__c</fullName>
        <label>Purchase Incoterm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>DAP</fullName>
                </value>
                <value>
                    <fullName>DAT</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_OrderNum__c</fullName>
        <inlineHelpText>Captura aqui: Numero de Orden de Compra, Purchase Order, etc..</inlineHelpText>
        <label>P.O. Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <formula>Account_for__r.Requiere_Orden_de_Compra__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>¿Requiere orden de compra?</inlineHelpText>
        <label>Purchase Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Que_fecha_esperaba_el_cliente__c</fullName>
        <description>Se agrega la fecha que esperaba el cliente en caso de declinar el folio por INTINERARIOS</description>
        <label>¿Qué fecha esperaba el cliente?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Que_tarifa_esperaba_el_cliente__c</fullName>
        <description>Se agrega la tarifa que esperaba el cliente en caso de declinar el folio por TARIFA ALTA</description>
        <label>¿Qué tarifa esperaba el cliente?</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Status__c</fullName>
        <inlineHelpText>Only Approved as Succesfull Quotes will be available for Pick &amp; Ship</inlineHelpText>
        <label>Quotation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote being prepared</fullName>
                    <color>#FF9900</color>
                    <default>true</default>
                    <label>Quote being prepared</label>
                </value>
                <value>
                    <fullName>Awaiting costs suppliers</fullName>
                    <color>#FF0000</color>
                    <label>Awaiting costs suppliers</label>
                </value>
                <value>
                    <fullName>Sent awaiting response</fullName>
                    <color>#FF6600</color>
                    <label>Sent awaiting response</label>
                </value>
                <value>
                    <fullName>Approved as Succesful</fullName>
                    <color>#006600</color>
                    <label>Approved as Succesful</label>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                    <color>#3366FF</color>
                    <label>Shipped</label>
                </value>
                <value>
                    <fullName>Quote Declined</fullName>
                    <color>#FF0000</color>
                    <label>Quote Declined</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Export_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Export Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Export Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Import_Export_Quotes_Export_Company</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Per Kg</fullName>
                </value>
                <value>
                    <fullName>Per TON</fullName>
                </value>
                <value>
                    <fullName>Per M3</fullName>
                </value>
                <value>
                    <fullName>Per Container</fullName>
                </value>
                <value>
                    <fullName>Per Pallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_Customer_Account_Owner__c</fullName>
        <label>Real Customer Account Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Delivery_Date_of_Production__c</fullName>
        <label>Real Delivery Date of Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_as__c</fullName>
        <label>Received as</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Amount</fullName>
                </value>
                <value>
                    <fullName>Partial Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <description>Gives reference value dependent on &quot;Last Shipment&quot; freight mode</description>
        <formula>BLANKVALUE(Last_Shipment__r.Number__c,BLANKVALUE(  Last_Shipment__r.Truck_Number__c ,  Last_Shipment__r.Flight_Number__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refrigerado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para identificar los folios de tipo refrigerado</description>
        <label>Refrigerado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Account_Owner__c</fullName>
        <formula>text(Account_for__r.Owner.Zona_Comercial__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_CountryPOD__c</fullName>
        <label>Region (POD)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Country__c</fullName>
        <label>Region (POL)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reiceived_Date__c</fullName>
        <label>Reiceived Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rejection_Reasons__c</fullName>
        <label>Rejection Reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reparto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reparto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requiere_Acuse__c</fullName>
        <formula>TEXT(Account_for__r.Requiere_Acuse_Sap__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requiere Acuse?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requiere_Seguro__c</fullName>
        <label>¿Requiere Seguro?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rol_de_Ventas__c</fullName>
        <formula>IF( CreatedBy.UserRole.Name  = &quot;SCFN&quot;, &quot;CUSTOMER SERVICE&quot;, 
IF( CreatedBy.UserRole.Name  = &quot;GERENTE SC TERRESTRE NACIONAL&quot;, &quot;CUSTOMER SERVICE&quot;,
IF( CreatedBy.UserRole.Name  = &quot;SC INTERNACIONAL&quot;,&quot;CUSTOMER SERVICE&quot;,
IF( CreatedBy.UserRole.Name  = &quot;GERENTE SC INTERNACIONAL&quot;,&quot;CUSTOMER SERVICE&quot;,
IF( CreatedBy.UserRole.Name  = &quot;SC PAQUETERIA&quot;,&quot;CUSTOMER SERVICE&quot;, &quot;COMMERCIAL&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rol de Ventas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Carrier_Line_Load_Point__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders</relationshipLabel>
        <relationshipName>Import_Export_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_Cerrado__c</fullName>
        <formula>Last_Shipment__r.SPCerrado__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SP Cerrado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUM_Buy_Origin_Amount__c</fullName>
        <description>Conversion to currency of SUM of all Cargo Lines &quot;Origin Buy Amount&quot; from SUM Buy Origin Amount Roll-Up</description>
        <formula>SUM_Buy_Origin_Amount_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SUM of all Cargo Lines&apos; &quot;Origin Buy Amount&quot;</inlineHelpText>
        <label>SUM Buy Origin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SUM_Buy_Origin_Amount_number__c</fullName>
        <label>SUM Buy Origin Amount (number)</label>
        <summarizedField>Quote_Item_Line__c.Origin_Buy_Amount_header__c</summarizedField>
        <summaryForeignKey>Quote_Item_Line__c.Import_Export_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SUM_Profit__c</fullName>
        <description>Conversion to currency of SUM of all Cargo Lines&apos; &quot;Sell Origin Amount&quot; - &quot;Buy Origin Amount&quot;, from SUM Profit Roll-Up</description>
        <formula>SUM_Sell_Origin_Amount_number__c - SUM_Buy_Origin_Amount_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SUM of all Cargo Lines&apos; &quot;Sell Origin Amount&quot; - &quot;Buy Origin Amount&quot;</inlineHelpText>
        <label>SUM Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SUM_Sell_Destination_Amount__c</fullName>
        <description>Conversion to currency of SUM Cargo Lines&apos; &quot;Sell Destination Amount&quot; from SUM Sell Destination Amount Roll-Up</description>
        <formula>SUM_Sell_Destination_Amount_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SUM of all Cargo Lines&apos; &quot;Sell Destination Amount&quot;</inlineHelpText>
        <label>SUM Sell Destination Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SUM_Sell_Destination_Amount_number__c</fullName>
        <label>SUM Sell Destination Amount (number)</label>
        <summarizedField>Quote_Item_Line__c.Destination_Sell_Amount_header_currency__c</summarizedField>
        <summaryForeignKey>Quote_Item_Line__c.Import_Export_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SUM_Sell_Origin_Amount__c</fullName>
        <description>Conversion to currency of Cargo Lines&apos; SUM &quot;Sell Origin Amount&quot; from SUM Sell Origin Amount Roll-Up</description>
        <formula>SUM_Sell_Origin_Amount_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SUM of all Cargo Lines&apos; &quot;Sell Origin Amount&quot;</inlineHelpText>
        <label>SUM Sell Origin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SUM_Sell_Origin_Amount_number__c</fullName>
        <label>SUM Sell Origin Amount (number)</label>
        <summarizedField>Quote_Item_Line__c.Origin_Sell_Amount_header_currency__c</summarizedField>
        <summaryForeignKey>Quote_Item_Line__c.Import_Export_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Executive_Acc__c</fullName>
        <formula>Account_for__r.Account_Executive_User__r.FirstName &amp;&quot; &quot;&amp;Account_for__r.Account_Executive_User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Incoterm__c</fullName>
        <inlineHelpText>Requerid for Impak</inlineHelpText>
        <label>Sales Incoterm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>DAP</fullName>
                </value>
                <value>
                    <fullName>DAT</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmentacion_de_cliente__c</fullName>
        <formula>TEXT(Account_for__r.Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segmentación de cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Amount_with_Discounts__c</fullName>
        <description>Conversion to currency of &quot;Additional Discounts&quot; - &quot;SUM Sell Destination Amount&quot;</description>
        <formula>SUM_Sell_Destination_Amount__c - Aditional_Discounts__c</formula>
        <inlineHelpText>&quot;Additional Discounts&quot; - &quot;SUM Sell Destination Amount&quot;</inlineHelpText>
        <label>Sell Dest. Amount with Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Send_Awaiting__c</fullName>
        <label>Send Awaiting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Utilzado en WF envio de notificaciones</description>
        <label>Send Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Response_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Utilizado en WF envio notificaciones</description>
        <label>Send Response Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Charges_Kg__c</fullName>
        <description>If &quot;Total Weight&quot; = 0 then case blank, else &quot;Total Services Sell Amount&quot; / &quot;Total Weight (Kg)&quot;</description>
        <formula>IF(Total_Weight_Kg2__c&lt;&gt;0,Total_Services_Sell_Amount_number__c / Total_Weight_Kg2__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Services Sell Amount&quot; / &quot;Total Weight (Kg)&quot;</inlineHelpText>
        <label>Service Charges / Kg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Charges_m3__c</fullName>
        <description>If &quot;Total Volume&quot; = 0 then case blank, else &quot;Total Services Sell Amount&quot; / &quot;Total Volume (m3)&quot;</description>
        <formula>IF(Total_Volume_m3_2__c&lt;&gt;0,Total_Services_Sell_Amount_number__c/Total_Volume_m3_2__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Services Sell Amount&quot; / &quot;Total Volume (m3)&quot;</inlineHelpText>
        <label>Service Charges / m3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Mode__c</fullName>
        <label>Service Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Freight_Mode__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IMPORT</fullName>
                </value>
                <value>
                    <fullName>EXPORT</fullName>
                </value>
                <value>
                    <fullName>NATIONAL</fullName>
                    <default>true</default>
                    <label>NATIONAL</label>
                </value>
                <value>
                    <fullName>INTERNATIONAL</fullName>
                </value>
                <value>
                    <fullName>PORT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Type_St__c</fullName>
        <label>Broker Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Acceso a plataforma</fullName>
                </value>
                <value>
                    <fullName>B - Departamento de CE</fullName>
                </value>
                <value>
                    <fullName>B expo - Departamento de CE</fullName>
                </value>
                <value>
                    <fullName>C - Comercializadora</fullName>
                </value>
                <value>
                    <fullName>E - Cesión de derechos</fullName>
                </value>
                <value>
                    <fullName>P - Importación personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>